--- a/2.html.html
+++ b/2.html.html
@@ -21,7 +21,7 @@
 	</style>
 </head>
 <body class="a" background="G:\sry.html\images\emoticon-sorry-sign-vector-illustration-white-background-190484787.jpg">
-	<p class="b"><a href="file:///G:/sry.html/1.html.html">click chesthava busy kakapothe</a></p>
+	<p class="b"><a href="https://prudhvichintu1001.github.io/final.github.io/1.html">click chesthava busy kakapothe</a></p>
 
 </body>
 </html>
