--- a/1.html.html
+++ b/1.html.html
@@ -46,7 +46,7 @@
 		</p>
 	</div>
 	<div class="k">
-		<a href="file:///G:/sry.html/3.html.html" >konchem click chesthava</a>
+		<a href="https://prudhvichintu1001.github.io/final.github.io/3.html" >konchem click chesthava</a>
 	</div>
 
 </body>
