--- a/3.html.html
+++ b/3.html.html
@@ -19,7 +19,7 @@
 </head>
 <body background="G:\sry.html\images\tenor.gif" class="c">
 	<div><p class="d">nak em cheppalo kuda ardam katle hmmmmm....nik chirak teypinchanu sorry sarle avi odiley eeroju exam tough antaga ela rasav....nak ee topic teydam istam le but nuv ela anukuntunav ani anipinchindi andke teyching nuv annav ga nuv verela expect chesthav nen aala kadhu ani ante emo nak anipinchindi andke chepthuna nak nik needa feelings lev..okapdu darunam ga vundeyvi anuko epdu matram lev nen oka normal prnd gane expect chesa nuv kuda mssg cheyyali ani ante verekadhu ee topic teychi uncfortable ga pheel aythe sorry but cheppali ga soo sare gani inka matladali ani lekapothey next page ki ellu its upto you ni istam nen em force cheylen ga kani oka mata please please please pleaseeeeeeeeeeeeeeeeeeeee matladuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuu normal ga text chesthe chadavadaniki bore koduthadi ani ela chesa inka animations transistions pedudam anukuna notes rayali rep andke fettale lekpothe peteyvadini ante avi pedithey edo avthadi ani kadhu edo na satisfaction eedanta endku chepthuna sarle nen em anukole notiki vachindi type sesthuna sare cheppaga matladali ani lekapothey next page ki go</p></div>
-	<p class="d"><a href="file:///G:/sry.html/4.html.html">nokavani korukuntuna</a></p>
+	<p class="d"><a href="https://prudhvichintu1001.github.io/final.github.io/4.html">nokavani korukuntuna</a></p>
 
 
 </body>
