--- a/1.html.html
+++ b/1.html.html
@@ -37,7 +37,7 @@
 <body class="a" background="G:\HTML SORRY\images\2.jpg.jpg">
 	<div class="b">
 		<p class="c"><marquee behavior="scroll" direction="left" scrollamount="50">SOORRRRY RAMYA</marquee></p>
-		<p class="c"><img src="G:\sry.html\images\2.jpg.jpg"></p>
+		<p class="c"><img src="https://media1.tenor.com/images/42b169bde91c9f80225e83004c5f5a24/tenor.gif?itemid=18316677"></p>
 	</div>
 	<div>
 		<p class="d">prnd nak adagadaniki edo la vundi nuv sudden ga inka apeydam annav ga nen chala pheeled frnd andke harsh ga respomnd ayyanu ninnu nen em anale ga prnd edo ala anipinchi nen sariga reply evvananta matrana apeydam antava...enti prnd sare eedaram misunderstand cheskunam odiley sorry epdu nen enta matladina i cant make up to it nak telsu poni nuv mssg cheyku kopam vunnatha varku ante gani apeydam anaku sare ni istam vachinapdu nuv mssg chey nen evar gani adagadaniki nuv mssg chey lekapothe assla cheyku nen petttinapdu reply padey ante gani sudden ga apeydam anaku ey babu sare koni rojulu nunchi edo issue vasthundi kavalani kadh ga prnd avvani nak telidhu matladu pleaseee 
