--- a/2.html.html
+++ b/2.html.html
@@ -20,7 +20,7 @@
 		}
 	</style>
 </head>
-<body class="a" background="G:\sry.html\images\emoticon-sorry-sign-vector-illustration-white-background-190484787.jpg">
+<body class="a" background="https://cdn.spinrilla.com/albums/189315/original/133127f9d1a31e012f97.png?1552468594">
 	<p class="b"><a href="https://prudhvichintu1001.github.io/final.github.io/1.html">click chesthava busy kakapothe</a></p>
 
 </body>
